<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/background_gradient"
    >
    
    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/ctfImport" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/ctf"
            android:paddingRight="10dp"
            android:checked="true"
        />
        <RadioButton
            android:id="@+id/ctkipImport" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/ctkip"    
            android:paddingRight="10dp"        
            android:checked="false"
        />
        <RadioButton
            android:id="@+id/fileImport" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/file"            
            android:checked="false"
        />
    </RadioGroup>
    
    <TextView         
        android:id="@+id/importLabel1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/ctfLabel"
        android:layout_marginLeft="5dp" 
        android:textColor="#000000"
        />    
    <EditText 
        android:id="@+id/importText1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"    
        android:layout_marginRight="5dp"      
        android:hint="@string/ctfHint"
       />
    <TextView 
        android:id="@+id/importLabel2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/passwordLabel"
        android:layout_marginLeft="5dp" 
        android:textColor="#000000"
        />
    <EditText
        android:id="@+id/importText2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"    
        android:layout_marginRight="5dp"  
        android:hint="@string/ctfPasswrodHint"
        />
    
	<CheckBox 
	    android:id="@+id/allowUntrustedCertCB"
 		android:text="@string/allowUntrustedCert"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_marginLeft="5dp"
 		android:textColor="#000000"
 		android:visibility="invisible"
	/>
    
	<Button
		     android:id="@+id/importTokenButton"
		     android:layout_width="wrap_content"
		     android:layout_height="wrap_content"
		     android:layout_gravity="right"
		     android:layout_marginTop="5dp"
		     android:layout_marginRight="10dp"
		     android:minWidth="80dp"
		     android:minHeight="25dp"
		     android:text="@string/importButtonText"
		 />
</LinearLayout>