<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

	    
	       <TextView 
	           android:text="@string/sampleApp"
	           android:layout_width="wrap_content"
	           android:layout_height="wrap_content"
	           android:layout_gravity="center"
	           android:paddingTop="10dp"
	           android:textSize="20sp" 
	           />
		   
	       <TextView 
	           android:id="@+id/deviceIDLabel"
	           android:text="@string/deviceID"
	           android:layout_width="fill_parent"
	           android:layout_height="wrap_content"
	           android:layout_gravity="center"
	           android:gravity="center"
	           android:paddingTop="40dp"
	           android:textSize="15sp" 
	           android:textColor="#ffff0f"
	           />
		   <TextView 
		           android:text="@string/copyright"
		           android:layout_width="fill_parent"
		           android:layout_height="wrap_content"
		           android:layout_gravity="center"
		           android:gravity="center"   
		           android:paddingTop="40dp" 
	               android:paddingBottom="20dp"
		           android:textSize="12sp" 
		           />
</LinearLayout>